--- a/editor.html
+++ b/editor.html
@@ -10,11 +10,11 @@
     <nav class="navbar bg-danger">
         <div class="container-fluid">
             <a class="navbar-brand col-8" href="#">MAHS Digital yearbook</a>
-            <a class="btn btn-light disabled" type="button">Home</a>
-            <a class="btn btn-light" href="editor.html" type="button">Editors</a>
+            <a class="btn btn-light" href="index.html" type="button">Home</a>
+            <a class="btn btn-light disabled" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
         </div>
     </nav>
-    <h1>aye foo you home</h1>
+    <h1>deez da Editaz</h1>
   </body>
 </html>
