--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light" href="list.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>aye foo you home</h1>
+    <h1>Deez dem Profiles</h1>
   </body>
 </html>
