Added Profile Button to All pages

--- a/list.html
+++ b/list.html
@@ -13,6 +13,7 @@
             <a class="btn btn-light" href="index.html" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light disabled" type="button">List</a>
+            <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
     <h1>sup cuh this is lists</h1>
