--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -10,10 +10,10 @@
     <nav class="navbar bg-danger">
         <div class="container-fluid">
             <a class="navbar-brand col-8" href="#">MAHS Digital yearbook</a>
-            <a class="btn btn-light disabled" type="button">Home</a>
+            <a class="btn btn-light" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
-            <a class="btn btn-light" href="list.html" type="button">Profiles</a>
+            <a class="btn btn-light disabled" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
     <h1>Deez dem Profiles</h1>
