--- a/editor.html
+++ b/editor.html
@@ -13,6 +13,7 @@
             <a class="btn btn-light" href="index.html" type="button">Home</a>
             <a class="btn btn-light disabled" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
+            <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
     <h1>deez da Editaz</h1>
