--- a/editor.html
+++ b/editor.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>deez da Editaz</h1>
+    <h1>Editor Page</h1>
   </body>
 </html>
