--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light disabled" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>Deez dem Profiles</h1>
+    <h1>Profile Page</h1>
   </body>
 </html>
