--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>aye foo you home</h1>
+    <h1>Home Page</h1>
   </body>
 </html>
