--- a/list.html
+++ b/list.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>sup cuh this is lists</h1>
+    <h1>List Page</h1>
   </body>
 </html>
