--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="btn btn-light disabled" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
-            <a class="btn btn-light" href="ProfilePage.html" type="button">Profiles</a>
+            <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
     <h1>Home Page</h1>
