Update and rename profilepage.html to profile.html

--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
             <a class="btn btn-light" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
-            <a class="btn btn-light disabled" href="profilepage.html" type="button">Profiles</a>
+            <a class="btn btn-light disabled" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
     <h1>Profile Page</h1>
