--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <nav class="navbar bg-danger">
         <div class="container-fluid">
             <a class="navbar-brand col-8" href="#">MAHS Digital yearbook</a>
-            <a class="btn btn-light" type="button">Home</a>
+            <a class="btn btn-light" href="index.html" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
             <a class="btn btn-light disabled" href="profile.html" type="button">Profiles</a>
