--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
             <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>Home Page</h1>
+      <section class="py-5">
+    <div class="container">
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="Basil1.JPG" class="card-img-top" alt="Person 1">
+            <div class="card-body">
+              <h5 class="card-title">Basil Mohammed</h5>
+              <p class="card-text">$29.99</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="Lebron1.jpg" class="card-img-top" alt="Person 2">
+            <div class="card-body">
+              <h5 class="card-title">Lebron James</h5>
+              <p class="card-text">$999,999.99</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="Jaden1.jpg" class="card-img-top" alt="Person 3">
+            <div class="card-body">
+              <h5 class="card-title">Jaden Sorensen</h5>
+              <p class="card-text">$29.99</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   </body>
 </html>
