--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!-- Card 1 -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="Basil1.JPG" class="card-img-top" alt="Person 1">
+            <img src="pictures/basil/basil1.JPG" class="card-img-top" alt="Person 1">
             <div class="card-body">
               <h5 class="card-title">Basil Mohammed</h5>
-              <p class="card-text">$29.99</p>
+              <p class="card-text">$17.38</p>
               <a href="#" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
@@ -33,10 +33,10 @@
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="Lebron1.jpg" class="card-img-top" alt="Person 2">
+            <img src="pictures/lebron/lebron1.jpg" class="card-img-top" alt="Person 2">
             <div class="card-body">
               <h5 class="card-title">Lebron James</h5>
-              <p class="card-text">$999,999.99</p>
+              <p class="card-text">Priceless</p>
               <a href="#" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
@@ -44,10 +44,10 @@
         <!-- Card 3 -->
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="Jaden1.jpg" class="card-img-top" alt="Person 3">
+            <img src="pictures/jaden/jaden1.jpg" class="card-img-top" alt="Person 3">
             <div class="card-body">
               <h5 class="card-title">Jaden Sorensen</h5>
-              <p class="card-text">$29.99</p>
+              <p class="card-text">$420.69</p>
               <a href="#" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
