--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
             <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
-      <section class="py-5">
+  <section class="py-5">
     <div class="container">
       <div class="row g-4">
-        <!-- Card 1 -->
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="pictures/basil/basil1.JPG" class="card-img-top" alt="Person 1">
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/basil/basil1.JPG" class="card-img-top" alt="Basil">
             <div class="card-body">
               <h5 class="card-title">Basil Mohammed</h5>
               <p class="card-text">$17.38</p>
@@ -30,10 +29,9 @@
             </div>
           </div>
         </div>
-        <!-- Card 2 -->
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="card h-100">
-            <img src="pictures/lebron/lebron1.jpg" class="card-img-top" alt="Person 2">
+            <img src="pictures/lebron/lebron1.jpg" class="card-img-top" alt="My Glorious King">
             <div class="card-body">
               <h5 class="card-title">Lebron James</h5>
               <p class="card-text">Priceless</p>
@@ -41,13 +39,68 @@
             </div>
           </div>
         </div>
-        <!-- Card 3 -->
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="pictures/jaden/jaden1.jpg" class="card-img-top" alt="Person 3">
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/jaden/jaden1.jpg" class="card-img-top" alt="Jaden">
             <div class="card-body">
               <h5 class="card-title">Jaden Sorensen</h5>
               <p class="card-text">$420.69</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/david/david1.jpg" class="card-img-top" alt="David">
+            <div class="card-body">
+              <h5 class="card-title">David Rooks</h5>
+              <p class="card-text">$0.01</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="py-5">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/sam/sam1.jpg" class="card-img-top" alt="Sam">
+            <div class="card-body">
+              <h5 class="card-title">Samuel Lathem</h5>
+              <p class="card-text">$36.00</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/justus/justus1.jpg" class="card-img-top" alt="Justus">
+            <div class="card-body">
+              <h5 class="card-title">Justus Paten</h5>
+              <p class="card-text">$999.99</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="pictures/andrew/andrew1.jpg" class="card-img-top" alt="Andrew">
+            <div class="card-body">
+              <h5 class="card-title">Andrew Curtin</h5>
+              <p class="card-text">$42.52</p>
+              <a href="#" class="btn btn-danger">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-80">
+            <img src="#" class="card-img-top" alt="#">
+            <div class="card-body">
+              <h5 class="card-title">#</h5>
+              <p class="card-text">$#</p>
               <a href="#" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
