--- a/list.html
+++ b/list.html
@@ -16,6 +16,6 @@
             <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>List Page</h1>
+    <a class="bg-danger" href="#"><h1>Jaden Sorensen</h1></a>
   </body>
 </html>
