--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <a class="btn btn-light disabled" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
-            <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
   <section class="py-5">
@@ -25,7 +24,7 @@
             <div class="card-body">
               <h5 class="card-title">Basil Mohammed</h5>
               <p class="card-text">$10.99</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="basil.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -35,7 +34,7 @@
             <div class="card-body">
               <h5 class="card-title">Lebron James</h5>
               <p class="card-text">Priceless</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="lebron.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -45,7 +44,7 @@
             <div class="card-body">
               <h5 class="card-title">Jaden Sorensen</h5>
               <p class="card-text">$10.99</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="jaden.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -55,7 +54,7 @@
             <div class="card-body">
               <h5 class="card-title">David Rooks</h5>
               <p class="card-text">$0.01</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="david.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -71,7 +70,7 @@
             <div class="card-body">
               <h5 class="card-title">Samuel Lathem</h5>
               <p class="card-text">$36.00</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="sam.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -79,9 +78,9 @@
           <div class="card h-80">
             <img src="pictures/justus/justus1.jpg" class="card-img-top" alt="Justus">
             <div class="card-body">
-              <h5 class="card-title">Justus Paten</h5>
+              <h5 class="card-title">Justus Patton</h5>
               <p class="card-text">$999.99</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="justus.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
@@ -91,17 +90,17 @@
             <div class="card-body">
               <h5 class="card-title">Andrew Curtin</h5>
               <p class="card-text">$42.52</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <a href="andrew.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card h-80">
-            <img src="#" class="card-img-top" alt="#">
+            <img src="pictures/austin/austin1.jpg" class="card-img-top" alt="Austin">
             <div class="card-body">
-              <h5 class="card-title">#</h5>
-              <p class="card-text">$#</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
+              <h5 class="card-title">Austin Wright</h5>
+              <p class="card-text">$10.92</p>
+              <a href="austin.html" class="btn btn-danger">Buy Now</a>
             </div>
           </div>
         </div>
