--- a/list.html
+++ b/list.html
@@ -13,9 +13,15 @@
             <a class="btn btn-light" href="index.html" type="button">Home</a>
             <a class="btn btn-light" href="editor.html" type="button">Editors</a>
             <a class="btn btn-light disabled" type="button">List</a>
-            <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
-    <a class="bg-danger" href="#"><h1>Jaden Sorensen</h1></a>
+    <a class="bg-danger" href="andrew.html"><h1>Andrew Curtin</h1></a>
+    <a class="bg-danger" href="austin.html"><h1>Austin Wright</h1></a>
+    <a class="bg-danger" href="basil.html"><h1>Basil Mohammed</h1></a>
+    <a class="bg-danger" href="david.html"><h1>David Rooks</h1></a>
+    <a class="bg-danger" href="jaden.html"><h1>Jaden Sorensen</h1></a>
+    <a class="bg-danger" href="justus.html"><h1>Justus Patton</h1></a>
+    <a class="bg-danger" href="lebron.html"><h1>Lebron James</h1></a>
+    <a class="bg-danger" href="sam.html"><h1>Samuel Lathem</h1></a>
   </body>
 </html>
