--- a/editor.html
+++ b/editor.html
@@ -13,9 +13,37 @@
             <a class="btn btn-light" href="index.html" type="button">Home</a>
             <a class="btn btn-light disabled" type="button">Editors</a>
             <a class="btn btn-light" href="list.html" type="button">List</a>
-            <a class="btn btn-light" href="profile.html" type="button">Profiles</a>
         </div>
     </nav>
-    <h1>Editor Page</h1>
+      <section class="py-5">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-80">
+            <div class="card-body">
+              <h5 class="card-title">Griffin Carter</h5>
+              <p class="card-text">Junior</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-80">
+            <div class="card-body">
+              <h5 class="card-title">Jake Eley</h5>
+              <p class="card-text">Junior</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-80">
+            <div class="card-body">
+              <h5 class="card-title">William Ewing</h5>
+              <p class="card-text">Senior</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   </body>
 </html>
