--- a/david.html
+++ b/david.html
@@ -48,12 +48,7 @@
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/david/david2.jpg"/>
             </div>
           </div>
       </div>
