--- a/jaden.html
+++ b/jaden.html
@@ -48,12 +48,12 @@
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/jaden/jaden2.jpg"/>
             </div>
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/jaden/jaden3.jpg"/>
             </div>
           </div>
       </div>
