--- a/lebron.html
+++ b/lebron.html
@@ -48,12 +48,17 @@
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/lebron/lebron2.jpg"/>
             </div>
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/lebron/lebron3.jpg"/>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="image-box">
+              <img src="pictures/lebron/lebron4.jpg"/>
             </div>
           </div>
       </div>
