--- a/sam.html
+++ b/sam.html
@@ -48,12 +48,12 @@
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/sam/sam2.jpg"/>
             </div>
           </div>
           <div class="col-3">
             <div class="image-box">
-              <img src="#"/>
+              <img src="pictures/sam/sam3.jpg"/>
             </div>
           </div>
       </div>
